# EMS

log_collector/: CMakeLists.txt
log_collector/include/: external_device.hpp  generated_metric_structure.hpp  logcollector_application.hpp  logger_utils.hpp  metric_loader.hpp
log_collector/source/: MasterMap.py  external_device.cpp  log_config.csv  logcollector_application.cpp  logger_utils.cpp  main.cpp  metric_loader.cpp
